--- a/style.css
+++ b/style.css
@@ -1,12 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+
 * {
   padding: 0;
   margin: 0;
 }
 
 body {
+  color: hsl(210, 10%, 33%);
   text-align: center;
   /* align-items: center; */
-  justify-content: center;
+  /* justify-content: center; */
+  overflow-x: hidden;
+  line-height: 30px;
+  font-family: "Bai Jamjuree", sans-serif;
+}
+
+img {
+  max-width: 100%;
+}
+
+p {
+  font-size: 18px;
 }
 
 header {
@@ -17,21 +31,25 @@ header {
   background-size: cover;
 }
 
+.history {
+  width: 700px;
+  margin: auto;
+}
+
 h1 {
+  font-size: 2.6rem;
   margin-top: 30px;
 }
 
 .details {
-  width: 450px;
   margin: 20px auto;
 }
 
-#download {
+.download {
   justify-content: center;
   display: flex;
-  gap: 1000px;
-  background-color: black;
-  margin-bottom: 300px;
+  gap: 20px;
+  margin: 60px 0px;
 }
 
 button {
@@ -39,6 +57,7 @@ button {
   border-radius: 30px;
   color: white;
   border: none;
+  box-shadow: 0px 10px 10px -5px rgba(0,0,0,0.33);
 }
 
 .ios-button {
@@ -49,3 +68,93 @@ button {
   background-color: hsl(233, 100%, 69%);
 }
 
+.keep-track,
+.access,
+.supercharge,
+.clipboard {
+  width: 700px;
+  justify-content: center;
+  margin: 100px auto 40px;
+}
+
+h2 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+.computer-div {
+  margin-top: 100px;
+  display: flex;
+  text-align: left;
+  gap: 10%;
+  align-items: center;
+  margin-bottom: 100px;
+}
+
+.computer {
+  margin-left: -200px;
+  width: 60%;
+}
+
+.quick {
+  gap: 150px;
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  margin-top: 50px;
+}
+
+h3 {
+  font-size: 1.5rem;
+  margin-bottom: 15px;
+}
+
+.create-plain-sneak {
+  margin-bottom: 100px;
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+
+.create-plain-sneak > div {
+  width: 25%;
+}
+
+.create-plain-sneak > div > img {
+  margin-bottom: 20px;
+}
+
+.logos {
+  display: flex;
+  justify-content: center;
+  gap: 200px;
+  align-items: center;
+}
+
+footer {
+  gap: 100px;
+  display: flex;
+  padding: 30px 100px;
+  align-items: center;
+  background-color: #f5f6f8;
+}
+
+.contact {
+  font-weight: 500;
+  column-gap: 100px;
+  row-gap: 10px;
+  width: 70%;
+  text-align: left;
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+}
+
+.contact > div {
+  width: 200px;
+}
+
+.socials {
+  display: flex;
+  gap: 20px;
+}
