--- a/style.css
+++ b/style.css
@@ -17,6 +17,15 @@ img {
   max-width: 100%;
 }
 
+a {
+  text-decoration: none;
+  color: hsl(210, 10%, 33%);
+}
+
+a:hover {
+  color: hsl(171, 66%, 44%);
+}
+
 p {
   font-size: 18px;
 }
